# sls-demo

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CLAUDE.md  README.md  Taskfile.yml  biome.json  commitlint.config.js  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  pr-title.yml
docs/: architecture.md  clean-code.md  conventions.md  decisions.md  domain-accounting.md  git-workflow.md  roadmap.md
infra/postgres/: init.sql
services/intelligence/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
services/intelligence/src/intelligence/: __main__.py
services/intelligence/src/intelligence/application/: ports.py  use_cases.py
services/intelligence/src/intelligence/domain/: __init__.py  engine.py  enums.py  metrics.py  money.py  project.py  warnings.py
services/intelligence/src/intelligence/infrastructure/netsuite/: adapter.py  client.py  mapping.py  schemas.py
services/intelligence/src/intelligence/interface/: app.py  config.py
services/intelligence/src/intelligence/interface/api/: schemas.py
services/intelligence/tests/: test_api.py  test_client.py  test_engine.py  test_integration.py  test_invariants.py  test_mapping.py  test_money.py  test_warnings.py
services/mock-netsuite/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
services/mock-netsuite/src/mock_netsuite/: __main__.py  app.py  config.py  db.py  models.py  records.py  repository.py  seed.py
services/mock-netsuite/tests/: conftest.py  test_app.py  test_seed.py
