[project]
name = "intelligence"
version = "0.1.0"
description = "Owner's-rep financial intelligence: the domain core and API on top of NetSuite."
readme = "README.md"
authors = [{ name = "FranciscoCastillo41", email = "frajcastillo@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.115",
    "ruff>=0.9",
    "pyright>=1.1.390",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RET", "PTH", "ANN"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
