[project]
name = "intelligence"
version = "0.2.0"
description = "Owner's-rep financial intelligence: the domain core and API on top of NetSuite."
readme = "README.md"
authors = [{ name = "FranciscoCastillo41", email = "frajcastillo@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[project.scripts]
intelligence = "intelligence.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.115",
    "ruff>=0.9",
    "pyright>=1.1.390",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RET", "PTH", "ANN"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
venvPath = "."
venv = ".venv"
# FastAPI route handlers are consumed by decorators, not direct calls.
reportUnusedFunction = false

[tool.pytest.ini_options]
testpaths = ["tests"]
